--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spx",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
