--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "ISC",
   "scripts": {
     "clean": "rm dist/bundle.js",
-    "start": "node server.js",
+    "start": "npm-run-all --parallel server client",
     "server": "nodemon index.js",
     "client": "webpack --watch --progress",
     "test": "jest",
